fix align issues with dashboard

--- a/src/sass/dashboard.sass
+++ b/src/sass/dashboard.sass
@@ -7,7 +7,8 @@
   flex-direction: row
   flex-wrap: wrap
   align-content: flex-start
-  justify-content: space-between
+  justify-content: space-evenly
+  align-items: flex-start
 
   &.active
     display: flex
@@ -21,9 +22,12 @@ $th-height-large: 320px
   position: relative
   align-self: flex-start
   box-sizing: border-box
-  height: $th-height-small
+  background-size: cover
+  //height: $th-height-small
   width: $th-height-small
-  margin: $inner-spacing/2
+  height: $th-height-small
+  border-radius: $card-border-radius
+  margin-bottom: $inner-spacing
 
   @media(min-width: #{$screen-med})
     width: $th-height-med
@@ -44,17 +48,19 @@ $th-height-large: 320px
     border-radius: $card-border-radius
   .thumbnail-label
     position: absolute
-    top: 0
+    bottom: 0
     left: 0
-    background: linear-gradient($black, rgba(0, 0, 0, 0))
+    background-color: $white
+    //background: linear-gradient(#000, rgba(0, 0, 0, 0))
     width: 100%
     padding: $card-border-radius
-    height: 3.0rem
-    color: $white
+    height: 2.5rem
+    color: $color-text
     text-align: center
     z-index: 1
-    border-top-left-radius: $card-border-radius
-    border-top-right-radius: $card-border-radius
+    font-size: 0.8rem
+    border-bottom-left-radius: $card-border-radius
+    border-bottom-right-radius: $card-border-radius
 
     @media(min-width: #{$screen-med})
       font-size: 1.5rem
